# structured-config-diff

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  MANIFEST.in  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  feature_request.md  rule_proposal.md
.github/workflows/: ci.yml
docs/: design.md  diff-model.md  github-upload-checklist.md  overview.md  release-checklist.md  report-format.md  security-and-privacy.md
examples/: README.md
examples/after/: config.json  config.toml
examples/before/: config.json  config.toml
examples/sensitive/: after.json  before.json
scripts/: check_upload_ready.py
structured_config_diff/: __init__.py  cli.py  differ.py  loader.py  models.py  paths.py  redaction.py  report.py
tests/: README.md  test_cli.py  test_differ.py  test_loader.py  test_paths.py  test_redaction.py  test_report.py  test_upload_check.py
