[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "structured-config-diff"
version = "0.1.0"
description = "Local-first structured diff reports for JSON and TOML configuration files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "structured-config-diff contributors" }
]
keywords = ["configuration", "diff", "json", "toml", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
config-diff = "structured_config_diff.cli:main"

[tool.setuptools.packages.find]
include = ["structured_config_diff*"]

[tool.setuptools.package-data]
structured_config_diff = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
